@@ -4,9 +4,9 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -17,59 +17,67 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Component
+@RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
     private final UserDetailsService userDetailsService;
 
-    public JwtAuthenticationFilter(JwtService jwtService, UserDetailsService userDetailsService) {
-        this.jwtService = jwtService;
-        this.userDetailsService = userDetailsService;
-    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
+
         String authHeader = request.getHeader("Authorization");
+
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        String jwt = authHeader.substring(7);
-        String subject;
-        try {
-            subject = jwtService.extractSubject(jwt);
-        } catch (Exception e) {
-            filterChain.doFilter(request, response);
-            return;
-        }
 
-        if (subject != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+        String jwt = authHeader.substring(7);
+
+        try {
+            String subject = jwtService.extractSubject(jwt);
+
+            if (subject == null) {
+                filterChain.doFilter(request, response);
+                return;
+            }
+
+            if (!jwtService.isTokenValid(jwt, subject)) {
+                log.debug("Invalid JWT token for subject: {}", subject);
+                filterChain.doFilter(request, response);
+                return;
+            }
+
             UserDetails userDetails = userDetailsService.loadUserByUsername(subject);
 
-            if (jwtService.isTokenValid(jwt, userDetails.getUsername())) {
-                List<String> roles = jwtService.extractRoles(jwt);
-                List<GrantedAuthority> authorities = roles.stream()
-                        .map(role -> role.startsWith("ROLE_") ? role : "ROLE_" + role)
-                        .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+            List<String> rawRoles = jwtService.extractRoles(jwt);
+            List<SimpleGrantedAuthority> authorities = rawRoles.isEmpty()
+                    ? null
+                    : rawRoles.stream()
+                    .map(role -> role.startsWith("ROLE_") ? role : "ROLE_" + role)
+                    .map(SimpleGrantedAuthority::new)
+                    .toList();
 
-                Authentication authToken = new UsernamePasswordAuthenticationToken(
-                        userDetails,
-                        null,
-                        authorities.isEmpty() ? userDetails.getAuthorities() : authorities
-                );
-                if (authToken instanceof UsernamePasswordAuthenticationToken token) {
-                    token.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                }
+            UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
+                    userDetails,
+                    null,
+                    authorities != null ? authorities : userDetails.getAuthorities()
+            );
+            authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 
-                SecurityContextHolder.getContext().setAuthentication(authToken);
-            }
+            SecurityContextHolder.getContext().setAuthentication(authToken);
+
+        } catch (Exception e) {
+            log.warn("JWT authentication failed: {}", e.getMessage());
+
         }
 
         filterChain.doFilter(request, response);
